[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/dialogo.tscn" type="PackedScene" id=1]
[ext_resource path="res://Professora.gd" type="Script" id=2]
[ext_resource path="res://spriteFrames/spriteframeprofessora.tres" type="SpriteFrames" id=3]
[ext_resource path="res://pergunta.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.25, 13.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 21 )

[node name="Professora" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 3 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.25, -0.5 )
shape = SubResource( 2 )

[node name="dialogo" parent="." instance=ExtResource( 1 )]

[node name="barreira" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="barreira"]
position = Vector2( -24, 59 )
shape = SubResource( 3 )

[node name="pergunta" parent="." instance=ExtResource( 4 )]

[connection signal="ended" from="dialogo" to="." method="_on_dialogo_ended"]
[connection signal="nao" from="pergunta" to="." method="_on_pergunta_nao"]
[connection signal="sim" from="pergunta" to="." method="_on_pergunta_sim"]
